err/nucleusapp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/NucleusApp'...
Listing './lib/python3.5/site-packages/NucleusApp/app'...
Listing './lib/python3.5/site-packages/NucleusApp/chest'...
Compiling './lib/python3.5/site-packages/NucleusApp/chest/__init__.py'...
***   File "./lib/python3.5/site-packages/NucleusApp/chest/__init__.py", line 62
    return self.get(f'#{name}::{str(uuid.uuid4())}')
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/NucleusApp/chest/container.py'...
***   File "./lib/python3.5/site-packages/NucleusApp/chest/container.py", line 126
    return f"Container: {chest}{self.name}({len(self)}){lock_status}"
                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NucleusApp/config'...
Listing './lib/python3.5/site-packages/NucleusApp/contrib'...
Listing './lib/python3.5/site-packages/NucleusApp/middlewares'...
Listing './lib/python3.5/site-packages/NucleusApp/middlewares/peewee_postgres'...
Compiling './lib/python3.5/site-packages/NucleusApp/middlewares/registry.py'...
***   File "./lib/python3.5/site-packages/NucleusApp/middlewares/registry.py", line 28
    raise RuntimeError(f"Middleware class '{middleware_name}' is not found!")
                                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NucleusApp/modules'...
Compiling './lib/python3.5/site-packages/NucleusApp/modules/registry.py'...
***   File "./lib/python3.5/site-packages/NucleusApp/modules/registry.py", line 58
    raise RuntimeError(f"NucleusApp can't run application with duplicate names."
                                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NucleusApp-0.1.1b6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
